# urgs

./: .env.dev  .env.example  .env.prod  .env.sit  .gitignore  .gitmessage  .gitmodules  AGENTS.md  CHANGELOG.md  README.en.md  README.md  REQUIREMENTS.md  URGS_Requirements.pptx  analyze_sql.py  default.conf  docker-compose.yml  fix_issue_status.sql  generate_cleanup_sql.py  insert_ssh_node_meta.sql  package.sh  start.sh  t_quartz_task.sql  update_ssh_meta.sql  walkthrough.md
urgs-agent/: README.md  pyproject.toml  start.sh  test_ark_embedding.py  test_banking_crew.py  test_embedder_connection.py  test_embedding.py  test_embeddings.py  test_raw_embed.py  verify_config.py
urgs-agent/agent/: PM_CENTRALIZED_ARCHITECTURE.md  agents.py  ark_embedder.py  crews.py  detective_agents.py  graph.py  state.py  tasks.py
urgs-agent/agent/policies/: approval_policy.py  injection_guard.py  tool_policy.py
urgs-agent/agent/runtime/: executor.py  tool_registry.py
urgs-agent/agent/tools/: __init__.py  banking_tools.py  safe_sql_guard.py  safe_sql_tool.py  schema_tool.py
urgs-agent/app/: main.py
urgs-agent/app/middleware/: auth.py  trace.py
urgs-agent/app/routes/: approvals.py  chat.py  (+2 more)
urgs-agent/core/: config.py  errors.py  logging.py
urgs-agent/llm/: client.py
urgs-agent/schemas/: api.py  events.py
urgs-agent/storage/: audit_store.py  session_store.py
urgs-agent/tests/: test_crew_memory.py  test_health.py  test_policy.py  test_safe_sql.py  test_session_store.py  verify_detective.py
urgs-agent/urgs_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1139 files in other folders)
